chore(ci): configure semantic-release to upload filterlist assets to GitHub releases

--- a/.releaserc
+++ b/.releaserc
@@ -37,7 +37,13 @@
       }
     ],
     [
-      "@semantic-release/github"
+      "@semantic-release/github",
+      {
+        "assets": [
+          "filterlist.txt",
+          "dist/*.txt"
+        ]
+      }
     ]
   ]
 }
